force-app/main/default/objects/IdPortenAuthProvider__mdt/IdPortenAuthProvider__mdt.object-meta.xml
<CustomObject>
    <label>ID-Porten Auth Provider</label>
    <pluralLabel>ID-Porten Auth Provider</pluralLabel>
</CustomObject>