force-app/main/default/objects/IdPortenAuthProvider__mdt/fields/CallbackURL__c.field-meta.xml
<CustomField>
    <fullName>CallbackURL__c</fullName>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>