force-app/main/default/objects/IdPortenAuthProvider__mdt/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <description>Consumer secret is the consumer &quot;password&quot; that is used, along with the consumer key, to request access (i.e. authorization) to a user&apos;s resources from a service provider.</description>
    <inlineHelpText>Consumer secret is the consumer &quot;password&quot; that is used, along with the consumer key, to request access (i.e. authorization) to a user&apos;s resources from a service provider.</inlineHelpText>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>