force-app/main/default/objects/IdPortenAuthProvider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope is a mechanism in OAuth 2.0 to limit an application&apos;s access to a user&apos;s account. An application can request one or more scopes, this information is then presented to the user in the consent screen, and the access token issued to the application will be limited to the scopes granted.</description>
    <inlineHelpText>Scope is a mechanism in OAuth 2.0 to limit an application&apos;s access to a user&apos;s account. An application can request one or more scopes, this information is then presented to the user in the consent screen, and the access token issued to the application will be limited to the scopes granted.</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>