force-app/main/default/objects/IdPortenAuthProvider__mdt/fields/TokenEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpointURL__c</fullName>
    <description>he URL that the application uses to get an access token from the authorization server (ID-Porten) using GET (verb) request.</description>
    <inlineHelpText>he URL that the application uses to get an access token from the authorization server (ID-Porten) using GET (verb) request.</inlineHelpText>
    <label>Token Endpoint URL</label>
    <type>Url</type>
</CustomField>