force-app/main/default/objects/IdPortenAuthProvider__mdt/fields/UserInfoEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>UserInfoEndpointURL__c</fullName>
    <description>The URL that the application uses to get user information from the authorization server (ID-Porten).</description>
    <inlineHelpText>The URL that the application uses to get user information from the authorization server (ID-Porten).</inlineHelpText>
    <label>User Info Endpoint URL</label>
    <type>Url</type>
</CustomField>